--- a/frontend/src/header.module.css
+++ b/frontend/src/header.module.css
@@ -1,6 +1,6 @@
 .header {
   height: rem(56px);
-  margin-bottom: 30px;
+  margin-bottom: 50px;
   background-color: var(--mantine-color-body);
   border-bottom: rem(1px) solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
 }
@@ -8,8 +8,15 @@
 .inner {
   height: rem(56px);
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  gap: 40px;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  @media screen and (max-width: 600px) {
+    justify-content: center;
+  }
+    
+  
 }
 
 .link {
